--- a/svg/auth/auth.scss
+++ b/svg/auth/auth.scss
@@ -14,6 +14,8 @@ $color: #333;
     left: 2em;
     width: 6em;
     height: 8em;
+    opacity: 1;
+    transition: opacity 0.3s;
     
     background: none no-repeat center;
 
@@ -51,7 +53,6 @@ $color: #333;
 
   &:hover .fingerprint {
     opacity: 0;
-    animation: fingerblink 2s;
   }
 
   .desktop, .laptop, .smartphone, .ok {
@@ -74,7 +75,7 @@ $color: #333;
   }
 
   &:hover .ok {
-    transition: opacity 0.3s 2s;
+    transition: opacity 0.3s 0.2s;
     opacity: 1;
   }
 
@@ -120,15 +121,10 @@ $color: #333;
 
   $blink: 0.4s;
   &:hover {
-    .desktop    { animation: deviceblink $blink * 3 2.3s 2; }
-    .laptop     { animation: deviceblink $blink * 3 2.3s + $blink 2; }
-    .smartphone { animation: deviceblink $blink * 3 2.3s + 2 * $blink 2; }
+    .desktop    { animation: deviceblink $blink * 3 0.3s infinite; }
+    .laptop     { animation: deviceblink $blink * 3 0.3s + $blink infinite; }
+    .smartphone { animation: deviceblink $blink * 3 0.3s + 2 * $blink infinite; }
   }
-}
-
-@keyframes fingerblink {
-  from, 40%, 80% { opacity: 1; }
-  20%, 60%, to { opacity: 0; }
 }
 
 @keyframes deviceblink {
