--- a/svg/pay/pay.scss
+++ b/svg/pay/pay.scss
@@ -1,16 +1,19 @@
 @import '../../node_modules/sassdash/index';
 @import '../../node_modules/sass-svg/index';
 
+$size: 10em;
 $color: #333;
 $sqrt2: 1.4142;
 
 @mixin band {
-  border: 0.45em solid $color;
+  border: 0.4em solid $color;
+  position: absolute;
+  top: 1.1em;
+  left: 3.1em;
   width: 3em;
   height: 7em;
-  margin: 1em 5em;
   border-radius: 1em;
-  position: relative;
+  transform: scale(0.8);
 
   &::before {
     content: '';
@@ -48,12 +51,14 @@ $sqrt2: 1.4142;
 }
 
 @mixin card {
-  border: 0.45em solid $color;
-  width: 10.5em;
-  height: 7em;
-  margin: 1em 1.25em;
+  border: 0.4em solid $color;
+  position: absolute;
+  top: 1.6em;
+  left: 0;
+  width: 9.2em;
+  height: 6em;
   border-radius: 1em;
-  position: relative;
+  transform: scale(0.9);
 
   &::before {
     content: '';
@@ -72,12 +77,15 @@ $sqrt2: 1.4142;
     height: 28%;
     font-size: 0.1em;
     background: $color;
-    box-shadow: 0 0 transparent;
     transform: scale(1, -1);
   }
 }
 
 .pay {
+  width: $size;
+  height: $size;
+  position: relative;
+
   .signal {
     position: absolute;
     left: -4em;
