--- a/svg/pay/pay.scss
+++ b/svg/pay/pay.scss
@@ -43,6 +43,16 @@ $sqrt2: 1.4142;
     transform: scale(1, 1);
   }
 
+  .signal {
+    position: absolute;
+    left: -4em;
+    width: 11em;
+    height: 7em;
+    opacity: 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
   @for $i from 1 to 4 {
     .signal#{$i} {
       animation: signal 0.8s #{0.4 + $i * 0.2}s infinite;
@@ -79,22 +89,17 @@ $sqrt2: 1.4142;
     background: $color;
     transform: scale(1, -1);
   }
+
+  .signal {
+    left: 0;
+    width: 0;
+  }
 }
 
 .pay {
   width: $size;
   height: $size;
   position: relative;
-
-  .signal {
-    position: absolute;
-    left: -4em;
-    width: 11em;
-    height: 7em;
-    opacity: 0;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
 
   @for $i from 1 to 4 {
     $w: 200;
@@ -122,23 +127,18 @@ $sqrt2: 1.4142;
     }
   }
 
-  .signal svg {
-    width: 100%;
-    fill: none;
-  }
-
-  .band, .card:hover { @include band; }
-  .card, .band:hover { @include card; }
+  .band, &:hover .card { @include band; }
+  .card, &:hover .band { @include card; }
 
   .band, .card {
     transition: all 0.6s;
   }
 
-  .band::before, .card:hover::before { transition: all 0.4s 0.2s; }
-  .band:hover::before, .card::before { transition: all 0.4s; }
+  .band::before, &:hover .card::before { transition: all 0.4s 0.2s; }
+  &:hover .band::before, .card::before { transition: all 0.4s; }
 
-  .band::after, .card:hover::after { transition: all 0.4s, background 0.2s; }
-  .band:hover::after, .card::after { transition: all 0.4s, background 0.2s; }
+  .band::after, &:hover .card::after { transition: all 0.4s, background 0.2s; }
+  &:hover .band::after, .card::after { transition: all 0.4s, background 0.2s; }
 }
 
 @keyframes signal {
